bg: undefuned NODE_ENV

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "git": "func() { git add . && git commit -m \"$1\" && git push origin HEAD; }; func",
-    "start": "NODE_ENV=production && node index.js",
-    "dev": "NODE_ENV=development && nodemon --legacy-watch  index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon --legacy-watch index.js",
     "test": "npm run test"
   },
   "keywords": [
